--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,7 +74,7 @@ nav ul li ul.submenu {
     padding: 10px 0;
     border-radius: 8px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-    z-index: 999;
+    z-index: 999;  /* Mantener el z-index alto para el submenú */
     min-width: 150px;
 }
 
@@ -116,21 +116,24 @@ nav ul li ul.submenu li a:hover {
     color: #aaa;
 }
 
-/* Ocultar el botón "hamburguesa" en pantallas grandes */
 .menu-toggle {
-    display: none; /* El botón estará oculto por defecto */
+    display: none;
 }
 
 /* Mostrar el botón en pantallas pequeñas */
 @media (max-width: 768px) {
     .menu-toggle {
-        display: block; /* El botón aparecerá solo en pantallas menores a 768px */
+        display: block;
         font-size: 24px;
         color: #fff;
         background: none;
         border: none;
         cursor: pointer;
         margin-right: 20px;
+        position: fixed;
+        top: 10px;
+        right: 10px;
+        z-index: 10000;
     }
 
     /* Ajustar el menú para pantallas pequeñas */
@@ -138,20 +141,33 @@ nav ul li ul.submenu li a:hover {
         flex-direction: column;
         width: 100%;
         position: fixed;
-        top: 60px; /* Ajusta según el tamaño de tu header */
-        left: -100%; /* El menú estará oculto inicialmente */
+        top: 60px;
+        left: -100%;
         height: 100vh;
         background: #121212;
-        transition: all 0.3s ease;
+        transition: all 0.3s ease-in-out;
         padding-top: 20px;
     }
 
     nav ul.show {
-        left: 0; /* Mostrar el menú cuando se activa la clase "show" */
+        left: 0;
     }
 
     nav ul li {
         margin: 20px 0;
+        text-align: center;
+    }
+
+    /* Ajustar el submenú para pantallas pequeñas */
+    nav ul li ul.submenu {
+        width: 100%;
+        position: relative;
+        left: 0;
+        top: 0;
+        z-index: 9999;
+    }
+
+    nav ul li ul.submenu li a {
         text-align: center;
     }
 
@@ -161,7 +177,7 @@ nav ul li ul.submenu li a:hover {
     }
 }
 
-
+/* Estilos de la página principal */
 body {
     background-color: #0b122b;
     color: #fff;
